--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=notesdb
 server.port=4201
+api.jwt.algorithm.secret=${API_JWT_ALGORITHM_SECRET}
+api.security.login.username=${API_SECURITY_LOGIN_USERNAME}
+api.security.login.bcrypt.password=${API_SECURITY_LOGIN_BCRYPT_PASSWORD}
